[package]
name = "lseq"
version = "0.1.0"
description = "LSEQ sequences"
keywords = ["crdt", "lseq"]
license = "MIT"
repository = "https://github.com/s-panferov/lseq"
authors = ["Stanislav Panferov <fnight.m@gmail.com>"]

[dependencies]
uuid = { version = "*", features = ["serde", "v4"]}
rand = "*"
num = "*"
skiplist = "*"

[dependencies.rug]
version = "*"
default-features = false
features = ["integer", "rand"]