[package]
name = "lseq"
version = "0.1.0"
description = "LSEQ sequences"
keywords = ["crdt", "lseq"]
license = "MIT"
repository = "https://github.com/s-panferov/lseq"
authors = ["Stanislav Panferov <fnight.m@gmail.com>"]

[dependencies]
uuid = { version = "^0.6.2", features = ["serde", "v4"] }
rand = "^0.4.2"
num = "^0.1.42"
skiplist = "^0.2.10"

[dependencies.rug]
version = "^1.0.1"
default-features = false
features = ["integer", "rand"]
